Add support for update mutations

--- a/entities/codegen/templates/api/types/class_name.py.j2
+++ b/entities/codegen/templates/api/types/class_name.py.j2
@@ -236,12 +236,13 @@ async def resolve_{{ cls.snake_name | lower }}(
 
 @strawberry.mutation(extensions=[DependencyExtension()])
 async def create_{{ cls.snake_name|lower }}(
-    self,
     input: {{ cls.name }}CreateInput,
     session: AsyncSession = Depends(get_db_session, use_cache=False),
     cerbos_client: CerbosClient = Depends(get_cerbos_client),
     principal: Principal = Depends(require_auth_principal),
 ) -> {{ cls.name }}:
+    params = input.__dict__
+
     # Validate that user can create entity in this collection
     attr = {"collection_id": input.collection_id}
     resource = Resource(id="NEW_ID", kind=db.{{ cls.name }}.__tablename__, attr=attr)
@@ -249,10 +250,45 @@ async def create_{{ cls.snake_name|lower }}(
         raise Exception("Unauthorized: Cannot create entity in this collection")
 
     # Save to DB
-    params = input.__dict__
     params["owner_user_id"] = int(principal.id)
     new_entity = db.{{ cls.name }}(**params)
     session.add(new_entity)
     await session.commit()
-
     return new_entity
+
+
+@strawberry.mutation(extensions=[DependencyExtension()])
+async def update_{{ cls.snake_name|lower }}(
+    input: {{ cls.name }}UpdateInput,
+    where: {{ cls.name }}WhereClause,
+    session: AsyncSession = Depends(get_db_session, use_cache=False),
+    cerbos_client: CerbosClient = Depends(get_cerbos_client),
+    principal: Principal = Depends(require_auth_principal),
+) -> {{ cls.name }}:
+    params = input.__dict__
+    
+    # Need at least one thing to update
+    num_params = len([x for x in params if params[x] is not None])
+    if num_params == 0:
+        raise Exception("No fields to update")
+
+    # Fetch entities for update, if we have access to them
+    entities = await get_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, [], CerbosAction.UPDATE)
+    if len(entities) == 0:
+        raise Exception("Unauthorized: Cannot update entities")
+
+    # Validate that the user has access to the new collection ID
+    if input.collection_id:
+        attr = {"collection_id": input.collection_id}
+        resource = Resource(id="SOME_ID", kind=db.{{ cls.name }}.__tablename__, attr=attr)
+        if not cerbos_client.is_allowed(CerbosAction.UPDATE, principal, resource):
+            raise Exception("Unauthorized: Cannot access new collection")
+
+    # Update DB
+    for entity in entities:
+        for key in params:
+            if params[key]:
+                setattr(entity, key, params[key])
+    await session.commit()
+    return entities
+
