--- a/entities/codegen/templates/cerbos/policies/class_name.yaml.j2
+++ b/entities/codegen/templates/cerbos/policies/class_name.yaml.j2
@@ -11,10 +11,11 @@ resourcePolicy:
       derivedRoles:
         - project_member
 
-    - actions: ['download']
+    - actions: ['download', 'delete']
       effect: EFFECT_ALLOW
       derivedRoles:
         - owner
   schemas:
     principalSchema:
       ref: cerbos:///principal.json
+
