--- a/entities/codegen/templates/api/types/class_name.py.j2
+++ b/entities/codegen/templates/api/types/class_name.py.j2
@@ -307,6 +307,6 @@ async def delete_{{ cls.snake_name|lower }}(
 
     # Update DB
     for entity in entities:
-        session.delete(entity)
+        await session.delete(entity)
     await session.commit()
     return entities
