--- a/entities/codegen/templates/api/types/class_name.py.j2
+++ b/entities/codegen/templates/api/types/class_name.py.j2
@@ -240,7 +240,7 @@ async def create_{{ cls.snake_name|lower }}(
     session: AsyncSession = Depends(get_db_session, use_cache=False),
     cerbos_client: CerbosClient = Depends(get_cerbos_client),
     principal: Principal = Depends(require_auth_principal),
-) -> {{ cls.name }}:
+) -> db.Entity:
     params = input.__dict__
 
     # Validate that user can create entity in this collection
@@ -264,7 +264,7 @@ async def update_{{ cls.snake_name|lower }}(
     session: AsyncSession = Depends(get_db_session, use_cache=False),
     cerbos_client: CerbosClient = Depends(get_cerbos_client),
     principal: Principal = Depends(require_auth_principal),
-) -> {{ cls.name }}:
+) -> Sequence[db.Entity]:
     params = input.__dict__
     
     # Need at least one thing to update
@@ -299,7 +299,7 @@ async def delete_{{ cls.snake_name|lower }}(
     session: AsyncSession = Depends(get_db_session, use_cache=False),
     cerbos_client: CerbosClient = Depends(get_cerbos_client),
     principal: Principal = Depends(require_auth_principal),
-) -> {{ cls.name }}:
+) -> Sequence[db.Entity]:
     # Fetch entities for deletion, if we have access to them
     entities = await get_db_rows(db.{{ cls.name }}, session, cerbos_client, principal, where, [], CerbosAction.DELETE)
     if len(entities) == 0:
