--- a/entities/codegen/templates/api/queries.py.j2
+++ b/entities/codegen/templates/api/queries.py.j2
@@ -4,9 +4,9 @@
 import strawberry
 from strawberry import relay
 from typing import Sequence
-from api.files import File, resolve_file
+from api.files import File, resolve_files
 {%- for class in classes %}
-from api.types.{{ class.snake_name }} import {{ class.name }}, resolve_{{ class.snake_name }}
+from api.types.{{ class.snake_name }} import {{ class.name }}, resolve_{{ class.plural_snake_name }}
 {%- endfor %}
 
 
@@ -16,10 +16,10 @@ class Query:
     node: relay.Node = relay.node()
 
     # Query files
-    file: Sequence[File] = resolve_file
+    files: Sequence[File] = resolve_files
 
     # Query entities
     {%- for class in classes %}
-    {{ class.snake_name }}: Sequence[{{ class.name }}] = resolve_{{ class.snake_name }}
+    {{ class.plural_snake_name }}: Sequence[{{ class.name }}] = resolve_{{ class.plural_snake_name }}
     {%- endfor %}
 
