--- a/entities/codegen/templates/test_infra/factories/class_name.py.j2
+++ b/entities/codegen/templates/test_infra/factories/class_name.py.j2
@@ -26,12 +26,16 @@ class {{ cls.name }}Factory(CommonFactory):
     class Meta:
         sqlalchemy_session = None  # workaround for a bug in factoryboy
         model = {{ cls.name }}
-        # TODO:
-        # What fields do we try to match to existing db rows to determine whether we
-        # should create a new row or not?
-        # sqlalchemy_get_or_create = ("name", "collection_location")
-
-    {%- for field in cls.owned_fields %}
+        # Match required fields with existing db rows to determine whether we should
+        # create a new row or not.
+        sqlalchemy_get_or_create = (
+        {%- for field in cls.owned_fields %}
+            {%- if field.required and field.name != "entity_id" %}
+            "{{ field.name }}",
+            {%- endif %}
+        {%- endfor %}
+        )
+    {% for field in cls.owned_fields %}
         {%- if field.type != "uuid" %}
             {%- if field.inverse and field.related_class.name != "Entity" %}
                 {%- if not field.multivalued %}
@@ -42,12 +46,23 @@ class {{ cls.name }}Factory(CommonFactory):
     )
                 {%- endif %}
             {%- elif field.type == "File" %}
+                {#- If the schema specifies what file_type to use, use that. #}
+                {#- Otherwise, default to fastq.}} #}
+                {%- if field.factory_type is not none %}
     {{ field.name }} = factory.RelatedFactory(
         FileFactory,
         factory_related_name="entity",
         entity_field_name="{{ field.name }}",
-        file_format="fastq", {# TODO: how to pick file_format #}
+        file_format="{{ field.factory_type }}",
     )
+                {%- else %}
+    {{ field.name }} = factory.RelatedFactory(
+        FileFactory,
+        factory_related_name="entity",
+        entity_field_name="{{ field.name }}",
+        file_format="fastq",
+    )
+                {%- endif %}
             {%- elif field.is_enum %}
     {{ field.name }} = fuzzy.FuzzyChoice([
         {%- for value in field.related_enum.permissible_values %}
@@ -56,10 +71,18 @@ class {{ cls.name }}Factory(CommonFactory):
         {%- endfor %}
     ])
             {%- else %}
-                {%- if field.test_type is not none %}
-    {{ field.name }} = factory.Faker("{{ field.test_type }}")
+                {#- If the schema specifies what factory type to use for the field, use that. #}
+                {#- Otherwise, try to infer a reasonable default based on the field's type.}} #}
+                {%- if field.factory_type is not none %}
+    {{ field.name }} = factory.Faker("{{ field.factory_type }}")
+                {%- elif field.type == "string" %}
+    {{ field.name }} = fuzzy.FuzzyText()
+                {%- elif field.type == "int" %}
+    {{ field.name }} = fuzzy.FuzzyInteger(1, 1000)
+                {%- elif field.type == "float" %}
+    {{ field.name }} = fuzzy.FuzzyFloat(1, 100)
                 {%- else %}
-    {{ field.name }} = factory.Faker("{{ field.type }}") {# TODO: how to determine what factory.Faker to use? #}
+    {{ field.name }} = factory.Faker("{{ field.type }}")
                 {%- endif %}
             {%- endif %}
         {%- endif %}
