--- a/entities/codegen/templates/api/queries.py.j2
+++ b/entities/codegen/templates/api/queries.py.j2
@@ -3,7 +3,7 @@
 
 import strawberry
 from strawberry import relay
-from typing import Sequence
+from typing import Sequence, List
 from api.files import File, resolve_files
 {%- for class in classes %}
 from api.types.{{ class.snake_name }} import {{ class.name }}, resolve_{{ class.plural_snake_name }}
@@ -13,7 +13,7 @@ from api.types.{{ class.snake_name }} import {{ class.name }}, resolve_{{ class.
 @strawberry.type
 class Query:
     # Allow queries by node ID
-    node: relay.Node = relay.node()
+    nodes: List[relay.Node] = relay.node()
 
     # Query files
     files: Sequence[File] = resolve_files
