--- a/entities/codegen/templates/api/types/class_name.py.j2
+++ b/entities/codegen/templates/api/types/class_name.py.j2
@@ -84,7 +84,7 @@ async def load_{{ related_field.related_class.snake_name }}_rows(
     return await dataloader.loader_for(relationship, where).load(root.id)  # type:ignore
         {%- else %}
     relationship = mapper.relationships["{{ related_field.name }}"]
-    return await dataloader.loader_for(relationship, where).load(root.{{ related_field.related_class.snake_name }}_id) # type:ignore
+    return await dataloader.loader_for(relationship, where).load(root.{{ related_field.name }}_id) # type:ignore
         {%- endif %}
     {%- endif %}
 {%- endfor %}
