Add ability to query one node + add more tests

--- a/entities/codegen/templates/api/queries.py.j2
+++ b/entities/codegen/templates/api/queries.py.j2
@@ -13,6 +13,7 @@ from api.types.{{ class.snake_name }} import {{ class.name }}, resolve_{{ class.
 @strawberry.type
 class Query:
     # Allow queries by node ID
+    node: relay.Node = relay.node()
     nodes: List[relay.Node] = relay.node()
 
     # Query files
