--- a/entities/codegen/templates/api/types/class_name.py.j2
+++ b/entities/codegen/templates/api/types/class_name.py.j2
@@ -117,6 +117,14 @@ def load_files_from(attr_name: str) -> Callable:
 # Define Strawberry GQL types
 # ------------------------------------------------------------------------------
 
+
+# Only let users specify IDs in WHERE clause when mutating data (for safety).
+# We can extend that list as we gather more use cases from the FE team.
+@strawberry.input
+class {{ cls.name }}WhereClauseMutations(TypedDict):
+    id: UUIDComparators | None
+
+
 # Supported WHERE clause attributes
 @strawberry.input
 class {{ cls.name }}WhereClause(TypedDict):
@@ -126,7 +134,9 @@ class {{ cls.name }}WhereClause(TypedDict):
     collection_id: IntComparators | None
     {%- for attr in cls.owned_fields %}
         {%- if attr.type == "uuid" %}
+            {%- if attr.name != "entity_id" %}
     {{ attr.name }}: Optional[UUIDComparators] | None
+            {%- endif %}
         {%- elif attr.type == "string" %}
     {{ attr.name }}: Optional[StrComparators] | None
         {%- elif attr.is_enum %}
@@ -263,7 +273,7 @@ async def create_{{ cls.snake_name }}(
 @strawberry.mutation(extensions=[DependencyExtension()])
 async def update_{{ cls.snake_name }}(
     input: {{ cls.name }}UpdateInput,
-    where: {{ cls.name }}WhereClause,
+    where: {{ cls.name }}WhereClauseMutations,
     session: AsyncSession = Depends(get_db_session, use_cache=False),
     cerbos_client: CerbosClient = Depends(get_cerbos_client),
     principal: Principal = Depends(require_auth_principal),
@@ -298,7 +308,7 @@ async def update_{{ cls.snake_name }}(
 
 @strawberry.mutation(extensions=[DependencyExtension()])
 async def delete_{{ cls.snake_name }}(
-    where: {{ cls.name }}WhereClause,
+    where: {{ cls.name }}WhereClauseMutations,
     session: AsyncSession = Depends(get_db_session, use_cache=False),
     cerbos_client: CerbosClient = Depends(get_cerbos_client),
     principal: Principal = Depends(require_auth_principal),
