--- a/platformics/codegen/templates/api/queries.py.j2
+++ b/platformics/codegen/templates/api/queries.py.j2
@@ -8,7 +8,9 @@ Make changes to the template codegen/templates/api/queries.py.j2 instead.
 import strawberry
 from strawberry import relay
 from typing import Sequence, List
+{%- if render_files %}
 from api.files import File, resolve_files
+{%- endif %}
 {%- for class in classes %}
 from api.types.{{ class.snake_name }} import {{ class.name }}, resolve_{{ class.plural_snake_name }}
 {%- endfor %}
@@ -20,8 +22,10 @@ class Query:
     node: relay.Node = relay.node()
     nodes: List[relay.Node] = relay.node()
 
+    {%- if render_files %}
     # Query files
     files: Sequence[File] = resolve_files
+    {%- endif %}
 
     # Query entities
     {%- for class in classes %}
