fix codegen for float columns

--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -22,7 +22,7 @@ from cerbos.sdk.client import CerbosClient
 from cerbos.sdk.model import Principal, Resource
 from fastapi import Depends
 from platformics.api.core.deps import get_cerbos_client, get_db_session, require_auth_principal
-from platformics.api.core.gql_to_sql import EnumComparators, DatetimeComparators, IntComparators, StrComparators, UUIDComparators, BoolComparators
+from platformics.api.core.gql_to_sql import EnumComparators, DatetimeComparators, IntComparators, FloatComparators, StrComparators, UUIDComparators, BoolComparators
 from platformics.api.core.strawberry_extensions import DependencyExtension
 from platformics.security.authorization import CerbosAction, get_resource_query
 from sqlalchemy import inspect
@@ -159,6 +159,8 @@ class {{ cls.name }}WhereClause(TypedDict):
     {{ attr.name }}: Optional[EnumComparators[{{ attr.type }}]] | None
         {%- elif attr.type == "int" %}
     {{ attr.name }}: Optional[IntComparators] | None
+        {%- elif attr.type == "float" %}
+    {{ attr.name }}: Optional[FloatComparators] | None
         {%- elif attr.type == "boolean" %}
     {{ attr.name }}: Optional[BoolComparators] | None
         {%- elif attr.type == "date" %}
