Add file concatenation

--- a/platformics/codegen/templates/api/mutations.py.j2
+++ b/platformics/codegen/templates/api/mutations.py.j2
@@ -8,7 +8,7 @@ Make changes to the template codegen/templates/api/mutations.py.j2 instead.
 import strawberry
 from typing import Sequence
 {%- if render_files %}
-from api.files import File, create_file, upload_file, mark_upload_complete, MultipartUploadResponse
+from api.files import File, create_file, upload_file, mark_upload_complete, concatenate_files, SignedURL, MultipartUploadResponse
 {%- endif %}
 
 {%- for class in classes %}
@@ -22,6 +22,7 @@ class Mutation:
     create_file: File = create_file
     upload_file: MultipartUploadResponse = upload_file
     mark_upload_complete: File = mark_upload_complete
+    concatenate_files: SignedURL = concatenate_files
     {%- endif %}
 {%- for class in classes %}
 
