--- a/platformics/codegen/templates/api/types/class_name.py.j2
+++ b/platformics/codegen/templates/api/types/class_name.py.j2
@@ -13,7 +13,7 @@ from typing import TYPE_CHECKING, Annotated, Optional, Sequence, Callable
 import database.models as db
 import strawberry
 import datetime
-from api.core.helpers import get_db_rows
+from platformics.api.core.helpers import get_db_rows
 {%- if render_files %}
 from api.files import File, FileWhereClause
 {%- endif %}
